# BittyTax

./: .gitignore  README_AU.md  architecture-description.md  pyproject.toml  ui-plan.md
.cursor/rules/: general.mdc
src/bittytax/templates/: audit_report.html  capital_gains.html  cgt_estimate.html  cover_page.html  header_footer.html  html_head.html  income.html  price_data.html  tax_full_report.html  tax_summary_report.html
