[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bittytax-au"
version = "1.0.0"
description = "BittyTax Australian - Cryptocurrency tax calculator for Australian tax rules"
dependencies = [
    # Core UI and data processing
    "PyQt6>=6.4.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    
    # Console and progress
    "colorama",
    "tqdm",
    
    # Network and data
    "requests",
    "pyyaml",
    
    # Python compatibility
    "typing-extensions",
    "setuptools",
    
    # Excel support
    "xlsxwriter",
    "openpyxl",
    
    # Date/time handling
    "python-dateutil",
    
    # PDF and reporting
    "jinja2",
    "xhtml2pdf",
    "reportlab",
    
    # Additional dependencies for full functionality
    "webencodings",
    "html5lib",
    "pypdf2",
    "pillow",
    "lxml",
    "beautifulsoup4",
    "chardet",
    "certifi",
    "urllib3",
    "idna",
    "charset-normalizer",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
bittytax-au = "bittytax.ui_main:main"
bittytax-au-cli = "bittytax.bittytax:main"

[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
enable_incomplete_feature = ["Unpack"]

[tool.djlint]
profile = "jinja"

# H005 Html tag should have lang attribute.
# H006 Img tag should have height and width attributes.
# H013 Img tag should have an alt attribute.
# H016 Missing title tag in html.
# H021 Inline styles should be avoided.
# H030 Consider adding a meta description.
# H031 Consider adding meta keywords.
ignore = "H005,H006,H013,H016,H021,H030,H031"
